--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,39 @@ footer {
     font-size: 14px;
     color: #666;
     }
+
+.right-box {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.login-btn {
+    background: white;
+    color: #0b1c2d;
+    border: none;
+    padding: 6px 10px;
+    border-radius: 6px;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.profile-box {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background: white;
+    color: #0b1c2d;
+    padding: 6px 10px;
+    border-radius: 6px;
+    font-size: 13px;
+}
+
+.profile-box button {
+    background: #0b1c2d;
+    color: white;
+    border: none;
+    padding: 4px 8px;
+    border-radius: 4px;
+    cursor: pointer;
+    }
