--- a/css/style.css
+++ b/css/style.css
@@ -237,3 +237,45 @@ body {
   color: white;
   font-size: 16px;
 }
+
+.sure-select {
+  width: 100%;
+  padding: 12px;
+  margin: 15px 0;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.ayet-card {
+  background: #fff;
+  margin-bottom: 15px;
+  padding: 15px;
+  border-radius: 14px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
+
+.ayet-head {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.ayet-arapca {
+  font-size: 22px;
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+.ayet-meal {
+  font-size: 15px;
+  color: #333;
+}
+
+.ayet-card button {
+  margin-top: 10px;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 8px;
+  background: navy;
+  color: white;
+  cursor: pointer;
+    }
