--- a/css/style.css
+++ b/css/style.css
@@ -278,4 +278,15 @@ body {
   background: navy;
   color: white;
   cursor: pointer;
-    }
+}
+
+.refresh-btn {
+  margin: 20px auto;
+  display: block;
+  padding: 10px 18px;
+  border-radius: 10px;
+  border: none;
+  background: navy;
+  color: #fff;
+  font-size: 15px;
+}
